<resources>
    <string name="app_name">MXC_Wallet</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_name">Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_ethaddress">EthAddress</string>

    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_cancle">I have changed my mind!</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_email_existed">This email has registered already!</string>
    <string name="error_field_required">This field is required</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="image_logo1">MXC logo 1</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="drawable_ETH_check">My ETH balance</string>
    <string name="drawable_MXC_check">My MXC balance</string>
    <string name="drawable_ETHTx_check">Check ETH transaction</string>
    <string name="drawable_MXCTx_check">Check MXC transaction</string>
    <string name="drawable_ETH_Tx">Send ETH</string>
    <string name="drawable_MXC_Tx">Send MXC</string>
    <string name="drawable_ETHTx_check_hash">Check transaction by hash</string>
    <string name="drawable_InternalTx_check">Check internal transaction</string>
    <string name="drawable_setting">Setting</string>

    <string name="scanbarcode_btn">Maybe Next Time!</string>
    <string name="scanbarcode_text">MXC QRCode Scanner</string>


    <string name="dialog_EthTx_msg">Please fill the info below.</string>
    <string name="dialog_EthTx_to">Send to</string>
    <string name="dialog_EthTx_amount">Amount</string>
    <string name="dialog_EthTx_ok">OK</string>
    <string name="dialog_EthTx_cancel">Cancel</string>
</resources>
